--- a/backend/-v/package.json
+++ b/backend/-v/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "cors": "^2.8.5"
   }
 }
